# hello_bgfx_triangle

./: CMakeLists.txt  README.md  build.sh  cmake_init_multi_thread.sh  cmake_init_single_thread.sh  prepare.sh  run.sh
scripts/: compile_shaders.sh
triangle/: CMakeLists.txt
triangle/src/: basic.cpp  glfw_only.cpp  main.cpp  shader_loader.cpp  shader_loader.hpp  triangle.cpp  triangle_alt.cpp  triangle_debug1.cpp  triangle_debug2.cpp  triangle_runtime_shader.cpp
